--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BY Blog
+title: rbt99's Blog
 SEOTitle: rbt99's blog
 header-img: img/post-bg-desk.jpg
 email: chinadone404@gmail.com
