--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: rbt99's Blog
-SEOTitle: rbt99's blog
+title: 我的玖玖
+SEOTitle: 我的玖玖
 header-img: img/post-bg-desk.jpg
 email: chinadone404@gmail.com
 description: "Every failure is leading towards success."
